--- a/my-app/src/pages/history/history.scss
+++ b/my-app/src/pages/history/history.scss
@@ -7,7 +7,7 @@
     height: 100%;
   }
   .input-container {
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     position: relative;
     z-index: 0;
@@ -101,6 +101,7 @@
     width: 100%;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    margin-top: 100px;
 
     &__frame {
       flex: 0 1 260px;
@@ -114,7 +115,7 @@
       &__picture {
         width: 100%;
       }
-      
+
       &:hover {
         transform: scale(1.1);
       }
@@ -131,7 +132,7 @@
     }
     .input-container {
       flex-direction: row;
-      width: $parentWidth;
+      width: 100vw;
       height: 100px;
       max-width: $parentMaxWidth;
     }
@@ -145,10 +146,10 @@
         max-width: calc($parentMaxWidth / $numDots);
       }
       &::before {
-        left: calc(calc(-1 * $parentWidth / $numDots) + calc($dotWidth / 2));
+        right: $dotWidth;
       }
       &::after {
-        right: calc(calc(-1 * $parentWidth / $numDots) + calc($dotWidth / 2));
+        left: $dotWidth;
       }
       &.active {
         span {
@@ -173,14 +174,9 @@
       }
     }
     .description-container {
-      margin-bottom: 100px;
-
       .article {
         .section {
           &__textarea {
-            &__title {
-            }
-
             &__paragraph {
               padding: 0 5rem 0 5rem;
             }
@@ -218,29 +214,29 @@
 @include mobile-layout {
   #history {
     .parent {
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: flex-start;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
     }
     .input-container {
-      flex-direction: column;
-      height: $parentHeight;
-      max-width: $parentMaxWidth;
+      flex-direction: row;
+      height: 25px;
+      width: 100%;
     }
     .input {
       &::before,
       &::after {
-        left: 50%;
-        transform: translateX(-50%);
-        height: calc($parentHeight / $numDots);
-        width: 5px;
-        max-height: calc($parentMaxHeight / $numDots);
+        top: 50%;
+        transform: translateY(-50%);
+        width: calc($parentWidth / $numDots);
+        height: 5px;
       }
       &::before {
-        top: calc(calc(-1 * $parentHeight / $numDots) + calc($dotWidth / 2));
+        right: $dotWidth;
       }
       &::after {
-        bottom: calc(calc(-1 * $parentHeight / $numDots) + calc($dotWidth / 2));
+        left: $dotWidth;
       }
       &.active {
         span {
@@ -252,52 +248,44 @@
       span {
         &::before,
         &::after {
-          top: 50%;
+          left: 50%;
         }
         &::after {
-          right: -45px;
-          transform: translateY(-50%);
-          font-size: 10px;
+          font-size: 14px;
+          top: -40px;
+          transform: translateX(-50%);
         }
       }
     }
     .description-container {
-      margin-bottom: 30px;
-      max-width: 80%;
+      max-width: 90%;
 
       .article {
-        background: linear-gradient(90deg, rgba(60,160,122,0.1) 0%, rgba(144,202,180,0.1) 28%, rgba(226,131,43,0.1) 100%);
-        box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-        
         .section {
           padding-bottom: 10px;
           &__textarea {
-
             &__title {
               text-align: center;
-              padding: 0 30px 0 30px;
               height: 60px;
 
-              & h2, h3, h4 {
+              & h2,
+              h3,
+              h4 {
                 text-decoration: none;
               }
 
               & h2 {
                 font-size: 20px;
-                position: absolute;
-                top: 63px;
-                left: 50%;
-                transform: translateX(-50%);
                 color: $accent-color;
                 width: 100%;
               }
               & h3 {
                 font-size: 15px;
-                color: $color-white;
+                color: $accent-color;
               }
               & h4 {
                 font-size: 10px;
-                color: $color-white;
+                color: $accent-color;
               }
             }
 
@@ -320,10 +308,6 @@
             }
           }
         }
-
-        &.active {
-          display: block;
-        }
       }
     }
     .gallery {
@@ -331,6 +315,7 @@
       width: 100%;
       justify-content: space-evenly;
       flex-wrap: wrap;
+      margin-top: 20px;
 
       &__frame {
         flex: 0 1 260px;
