--- a/my-app/src/pages/home/index.scss
+++ b/my-app/src/pages/home/index.scss
@@ -424,6 +424,7 @@
           }
 
           &__text {
+            width: calc(100% - 100px);
 
             h4 {
               display: flex;
@@ -431,7 +432,7 @@
               align-items:center;
               justify-content:center;
               height: 100px;
-              font-size: 30px;
+              font-size: 25px;
               color: $accent-color;
             }
 
