--- a/my-app/src/pages/join/join.scss
+++ b/my-app/src/pages/join/join.scss
@@ -17,7 +17,9 @@
           border-radius: 4px;
           overflow: hidden;
           aspect-ratio: 4 / 3;
-          box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+          box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px,
+            rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px,
+            rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
           &__frame {
             position: absolute;
@@ -31,7 +33,6 @@
           h2,
           span {
             position: absolute;
-            color: #fff;
             z-index: 2;
             width: 100%;
             transition: opacity 0.2s, transform 0.3s;
@@ -53,7 +54,6 @@
           span {
             text-align: center;
             top: 50%;
-            transform: translatey(-50%);
             margin: 0;
             z-index: 3;
           }
@@ -124,15 +124,19 @@
 
         .blury-card {
           .join__image__wrapper__box__frame {
-            width: calc(100% - 120px);
-            height: calc(100% - 120px);
+            width: calc(100% - 160px);
+            height: calc(100% - 160px);
             opacity: 0;
             transition: all 0.3s ease-in-out;
           }
-          
+
+          h2,
+          span {
+            color: $color-white;
+          }
+
           span {
             transform: translatey(30px);
-            letter-spacing: 3px;
           }
 
           h2 {
@@ -219,27 +223,35 @@
           position: absolute;
           width: 100%;
           height: 100%;
-          background: #008e6b;
           z-index: 1;
           left: 0;
-          opacity: 1;
 
           .join__image__wrapper__box__frame {
             width: calc(100% - 40px);
             height: calc(100% - 40px);
           }
 
+          span,
+          h2 {
+            font-size: 20px;
+            color: $color-white;
+            text-shadow:
+            1px 1px 0 $color-black,
+            -1px 1px 0 $color-black,
+            -1px -1px 0 $color-black,
+            1px -1px 0 $color-black;
+        
+          }
+
           span {
-            transform: translatey(30px);
-            letter-spacing: 3px;
+            transform: translatey(20px);
           }
 
           h2 {
-            transform: translatey(-30px);
+            transform: translatey(-40px);
           }
         }
       }
     }
   }
 }
-
