--- a/my-app/src/pages/newsletter/newsletter.scss
+++ b/my-app/src/pages/newsletter/newsletter.scss
@@ -4,7 +4,6 @@
 #news {
   .btn {
     &--back {
-      margin-top: 50px;
       background-color: $light-color;
       border: 2px solid $dark-color;
       border-radius: 30px;
@@ -40,13 +39,8 @@
       text-align: center;
       justify-content: space-around;
       width: 100%;
-      margin: 25px 0 50px 0;
 
       &__text {
-        padding: 0 80px 0 20px ;
-        flex-direction: column;
-        justify-content: space-around;
-
         &__title {
           text-align: center;
           color: $accent-color;
@@ -59,34 +53,121 @@
 
       &__image {
         position: relative;
-        margin-left: 80px;
-        max-width: 300px;
-        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 
         &img {
           width: 100%;
         }
 
         &__caption {
-          position: absolute;
-          max-width: 350px;
-          width: 100%;
-          left: 50%;
-          transform: translateX(-50%);
-          bottom: 0;
           background-color: $light-color;
         }
       }
     }
 
     &__section {
-      padding: 0 80px 50px 80px;
       text-align: justify;
     }
 
     &__footer {
-      padding: 0 80px 50px 80px;
       text-align: justify;
     }
+  }
+}
+
+@include desktop-layout {
+  #news {
+    .article {  
+      &__header {
+        margin: 25px 0 50px 0;
+  
+        &__text {
+          padding: 0 80px 0 20px ;
+          flex-direction: column;
+          justify-content: space-around;
+  
+          &__title {
+          }
+  
+          &__paragraph {
+          }
+        }
+  
+        &__image {
+          margin-left: 80px;
+          max-width: 300px;
+          box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+
+          &__caption {
+            position: absolute;
+            max-width: 350px;
+            width: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            bottom: 0;
+          }
+        }
+      }
+  
+      &__section {
+        padding: 0 80px 50px 80px;
+      }
+  
+      &__footer {
+        padding: 0 80px 50px 80px;
+      }
+    }
+    .btn {
+      &--back {
+        margin-top: 50px;
+      }
+    }
+  }
+}
+
+@include mobile-layout {
+  #news {
+    .article {  
+      &__header {
+        padding-bottom: 30px;
+        position: relative;
+  
+        &__text {
+          flex-direction: column;
+          width: 60%;
+  
+          &__title {
+            padding-bottom: 10px;
+          }
+  
+          &__paragraph {
+            width: 100%;
+            text-align: left;
+          }
+        }
+  
+        &__image {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          width: 30%;
+          object-fit: contain;
+
+          & img {
+            width: 100%;
+            box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+          }
+
+          &__caption {
+            margin-top: 10px;
+          }
+        }
+      }
+
+
+      &__footer {
+        padding-top: 20px;
+      }
+    }
+
   }
 }
