--- a/my-app/src/components/slider/slider.scss
+++ b/my-app/src/components/slider/slider.scss
@@ -18,8 +18,8 @@
   align-items: center;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   z-index: 4;
   opacity: 0;
 
@@ -35,16 +35,15 @@
   &__backgroung {
     position: fixed;
     background: linear-gradient(90deg, $light-color 0%, $primary-color 35%, $dark-color 100%);
-    opacity: 0.95;
     border: none;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
   }
 
   &__shut {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 2%;
+    right: 2%;
     width: $desktop-header-radius;
     height: $desktop-header-radius;
     background-color: transparent;
@@ -81,123 +80,121 @@
   &__container {
     position: relative;
     justify-content: center;
-    text-align: center;
-    z-index: 5;
+    align-items: center;
+    flex-direction: column;
     overflow: hidden;
-    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-
-    &__activeslide {
-      height: 100%;
-    }
+    z-index: 3;
+    width: 100%;
+    height: 100%;
 
     &__btn {
+      position: absolute;
       justify-content: center;
       align-items: center;
       width: 40px;
-      height: 100%;
-      position: absolute;
-      top: 0;
+      height: 40px;
       z-index: 6;
       background-color: $accent-color;
-      opacity: 0;
+      opacity: 0.5;
       animation: both 1s;
+      border-radius: 50%;
 
       &:hover {
         cursor: pointer;
-        opacity: 0.5;
-      }
-
-      &--next {
-        right: 0;
-      }
-
-      &--previous {
-        left: 0;
+        opacity: 1;
       }
     }
-  }
 
-  &__thumbnails {
-    z-index: 5;
-    justify-content: space-between;
+    &__dots {
+      position: absolute;
+      width: 100%;
 
-    .scroll-container {
-      display: flex;
-      overflow-x: auto; /* Permet le défilement horizontal */
-      width: 100%; /* Ajustez la largeur comme nécessaire */
-    }
-
-    &__thumbnail {
-      .clicked {
-        transform: scale(1.2);
-        border: thick double $accent-color;
-        flex: 0 0 auto;
-      }
-      button {
-        height: 100%;
+      & li {
+        position: relative;
+        display: inline-block;
         overflow: hidden;
+        border-radius: 50%;
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+          rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+        margin: 0 5px;
 
-        &:hover {
+        & button {
+          height: 100%;
+          width: 100%;
+          background: {
+            color: $accent-color;
+            size: auto 100%;
+            position: center;
+          }
           cursor: pointer;
         }
-        img {
-          height: 100%;
-          object-fit: cover;
+
+        & :hover {
+          transform: scale(1.3);
         }
+      }
+
+      & .active {
+        border: solid 2px $accent-color;
+        transform: scale(1.2);
       }
     }
   }
-}
-
-.scroll-container {
-  height: calc(100px * 1.2);
-  padding: 0 20px 0 20px;
 }
 
 @include desktop-layout {
-  .slider {
-    &__container {
+  .slider__container {
+    &__frame {
+      width: 80%;
       height: 80%;
-      margin-bottom: 1%;
-      border-radius: 10px;
+    }
 
-      &__activeslide {
-        img {
-          object-fit: contain;
-        }
+    &__btn {
+      top: 40%;
+
+      &--next {
+        right: 150px;
+      }
+
+      &--previous {
+        left: 150px;
       }
     }
-    &__thumbnails {
-      &__thumbnail {
-        height: 100px;
-        margin: 5px;
+
+    &__dots {
+      bottom: 60px;
+
+      & li {
+        height: 40px;
+        width: 40px;
       }
     }
   }
 }
 
 @include mobile-layout {
-  .slider {
-    &__container {
-      max-height: 70%;
-      width: 90%;
-      border-radius: 10px;
+  .slider__container {
+    &__frame {
+      width: 100%;
+      height: 80%;
+    }
 
-      &__activeslide {
-        width: 100%;
+    &__btn {
+      &--next {
+        right: 10px;
+      }
 
-        img {
-          object-fit: cover;
-        }
+      &--previous {
+        left: 10px;
       }
     }
-    &__thumbnails {
-      position: absolute;
-      bottom: 20px;
 
-      &__thumbnail {
-        height: 70px;
-        margin: 5px;
+    &__dots {
+      bottom: 30px;
+
+      & li {
+        height: 20px;
+        width: 20px;
       }
     }
   }
