--- a/my-app/src/sass-utils/variables.scss
+++ b/my-app/src/sass-utils/variables.scss
@@ -27,3 +27,6 @@ $inactive: $light-color;
 $raised: 10000;
 $goal: 18000;
 $ratioRaised: calc($raised/$goal);
+
+$special: "Abril Fatface", serif;
+$body: "Lato", sans-serif;
